--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,11 @@
 
 
 @layer base {
+  .Roundedtop{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
   .LeftMarg-10{
     margin-left: 10px;
   }
